--- a/imooc-security-demo/src/main/resources/application.properties
+++ b/imooc-security-demo/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 spring.session.store-type=none
+spring.http.log-request-details=true
 
 spring.security.user.name=user
 spring.security.user.password=123456
